Added some thanks to @raskad, and added links to contributors

--- a/posts/2022-06-10-boa-release-15.md
+++ b/posts/2022-06-10-boa-release-15.md
@@ -62,6 +62,8 @@ let f = Function("arg", 'console.log("This is also a very " + arg + " idea!")');
 f("bad");
 ```
 
+Thanks to [@raskad](https://github.com/raskad) for working on classes, `eval()` and `Function()`, among many other things!
+
 ## Regaining Performance
 
 After moving from an AST based execution to our Virtual Machine we observed performance losses in some of our benchmarks. We
@@ -69,14 +71,15 @@ found out that the root-cause of these losses was a single `format!()` call in t
 the formatting logic would be optimized out by rustc or llvm, because it was used as an argument to an empty (feature-gated)
 function. After replacing the `format!()` call with a `&'static str` the expected optimization took place and we were back to
 previous performance levels. For more details check out [#1973](https://github.com/boa-dev/boa/pull/1973) for the changes and
-some discussion about this issue. Thanks to @pdogr for finding the issue and contributing a fix.
+some discussion about this issue. Thanks to [@pdogr](https://github.com/pdogr) for finding the issue and contributing a fix.
 
 ## Starting work on Internationalization
 
 ECMAScript specifies an Internationalization API through the `Intl` global object. We have started implementing many internal
 functions and structures to provide the `Intl` object in boa. To take advantage of existing work in this space we have started
-integrating the [ICU4X library](https://github.com/unicode-org/icu4x) into boa. Thanks to @NorbertGarfield and @jedel1043 for
-their continued work on this topic.
+integrating the [ICU4X library](https://github.com/unicode-org/icu4x) into boa. Thanks to
+[@NorbertGarfield](https://github.com/NorbertGarfield) and [@jedel1043](https://github.com/jedel1043) for their continued work
+on this topic.
 
 ## Rust Wrappers for Javascript Objects
 
