Added the release date and added the performance enhancements

--- a/posts/2022-09-25-boa-release-16.md
+++ b/posts/2022-09-25-boa-release-16.md
@@ -52,8 +52,9 @@ JavaScript Arrays are regular objects whose values are stored as indexed propert
 length, values can be assigned to any possible index without any of the previous indices being used. Due to this
 behavior indexed properties are stored in a map instead of in a vector, as the vector would allocate a lot of unused
 memory if a high index is used. We have implemented an optimization to make it possible to use optimized vector storage
-for array values, as long as indices are not assigned out of order. To learn more about this optimization take a look at
-the PR [#2167](https://github.com/boa-dev/boa/pull/2167).
+for array values, as long as indices are not assigned out of order. This has improved the performance of arrays around
+**45%** for arrays without empty slots. To learn more about this optimization take a look at the PR
+[#2167](https://github.com/boa-dev/boa/pull/2167).
 
 ## Support for URI encoding and decoding functions
 
