Fixed comment in the code

--- a/posts/2022-10-24-boa-usage.md
+++ b/posts/2022-10-24-boa-usage.md
@@ -313,7 +313,8 @@ use boa_engine::{
     builtins::JsArgs, object::JsArray, property::Attribute, Context, JsResult, JsValue,
 };
 
-/// Says "hello" using the first argument.
+/// Reverses an array and appends the `"My Project"` string and the `MY_PROJECT_VERSION` global
+/// property to it.
 fn reverse_append(_this: &JsValue, args: &[JsValue], context: &mut Context) -> JsResult<JsValue> {
     let arr = args
         .get_or_undefined(0)
