--- a/posts/2022-10-24-boa-usage.md
+++ b/posts/2022-10-24-boa-usage.md
@@ -77,7 +77,7 @@ ask, you can convert it to and from a [`serde_json::Value`][json-value], of cour
 
 As you can see in those methods, or in the `Context::eval()` that we used earlier, you will
 receive a `JsResult` as a response. This result type will contain a `JsValue` as its error variant,
-which means you can return the error back to JavaScript for it to hndle it. A `JsValue`, internally,
+which means you can return the error back to JavaScript for it to handle it. A `JsValue`, internally,
 is a garbage-collected JavaScript value. But, isn't Rust one of the few non-garbage collected
 languages? Wasn't that a good thing?
 
