--- a/posts/2022-10-24-boa-usage.md
+++ b/posts/2022-10-24-boa-usage.md
@@ -169,7 +169,7 @@ And you can use it in JavaScript:
 say_hello(MY_PROJECT_VERSION);
 ```
 
-The [`Attribute`][attribute] of a properrty indicates if it will be writable (it can be set and
+The [`Attribute`][attribute] of a property indicates if it will be writable (it can be set and
 modified), enumerable (it can be used in `for..in` statements) and configurable (its attributes or
 type of property can be modified).
 
