--- a/posts/2022-10-24-boa-usage.md
+++ b/posts/2022-10-24-boa-usage.md
@@ -374,7 +374,7 @@ We are looking for contributors to implement the rest of the wrappers, and of co
 [jsobject-get]: https://docs.rs/boa_engine/latest/boa_engine/object/struct.JsObject.html#method.get
 [2098]: https://github.com/boa-dev/boa/issues/2098
 
-## What's comming next?
+## What's coming next?
 
 Boa's development is ongoing non-stop. The next version, v0.17, is already looking pretty nice,
 with some great enhancements. For example, [@jedel1043][jedel1043] has created new
