--- a/posts/2022-10-24-boa-usage.md
+++ b/posts/2022-10-24-boa-usage.md
@@ -22,7 +22,7 @@ workloads. You can check how conformant we are with the official ECMAScript spec
 [here](https://boa-dev.github.io/boa/test262/).
 
 And, before going further, we would like to mention that you can contribute to Boa by solving one
-of the [issues][issues] where we need especial help, and we now also accept financial contributions
+of the [issues][issues] where we need special help, and we now also accept financial contributions
 in [our OpenCollective][opencollective] page.
 
 _Note: You can see more examples of integrating Boa in [our repository][examples-repo]._
