Fixed "blocking" issues link

--- a/posts/2022-10-24-boa-usage.md
+++ b/posts/2022-10-24-boa-usage.md
@@ -27,7 +27,7 @@ in [our OpenCollective][opencollective] page.
 
 _Note: You can see more examples of integrating Boa in [our repository][examples-repo]._
 
-[blocking]: https://github.com/orgs/boa-dev/projects/2/views/1
+[blocking]: https://github.com/boa-dev/boa/issues?q=64+162+718+773+2068+1930+1922+1917+1900+1848+1805+1570+1402+1307+1180+is%3Aopen
 [issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22help+wanted%22%2CHacktoberfest%2CE-Easy%2C%22good+first+issue%22+no%3Aassignee
 [opencollective]: https://opencollective.com/boa
 [examples-repo]: https://github.com/boa-dev/boa/tree/main/boa_examples
