Added the final touches to the release post

--- a/posts/2023-07-05-boa-release-17.md
+++ b/posts/2023-07-05-boa-release-17.md
@@ -12,8 +12,9 @@ of development, we are very happy to present you the latest release of the Boa J
 embed a JS engine in your projects, and you can even use it from WebAssembly. See the [about](/about) page for more info.
 
 In this release, our conformance has grown from 74.53% to 78.75% in the official ECMAScript Test Suite (Test262). While
-this might look as a small increase, we now pass **6,079** tests more than previously. In any case, the big changes in
-this release are not related to conformance, but to huge internal enhancements and new APIs that you will be able to use.
+this might look as a small increase, we now pass **6,079** more tests than in the previous version. In any case, the big
+changes in this release are not related to conformance, but to huge internal enhancements and new APIs that you will be
+able to use.
 
 You can check the full list of changes [here][changelog], and the full information on conformance [here][conformance].
 
@@ -84,8 +85,9 @@ For a more extensive, descriptive example that uses a real directory, you can ch
 Something we get asked a lot is _"Do you support ES5 or ES6"_? or _"How far away are you from supporting ESX"_?
 We're pleased to say we've updated our conformance board to show you how we're doing across ES versions.
 
-Just navigate to our [Test262 Dashboard](https://boajs.dev/boa/test262/), select "Test Results" on our main branch, then you can then use the dropdown underneath to see how we're doing on each version.
-ES5 and ES6 are very close, you can see we're only a few tests away from them being fully implemented.
+Just navigate to our [Test262 Dashboard](https://boajs.dev/boa/test262/), select "Test Results" on our main branch, and
+then you can use the dropdown underneath to see how we're doing on each version. ES5 and ES6 are very close, you can see
+we're only a few tests away from them being fully implemented.
 
 ### Optimizations
 
@@ -207,11 +209,12 @@ println!("{str:?}");
 
 #### Source API
 
-We have introduced a new `Source API` to Boa.
-The new API represents JavaScript stored from a path or `None` if it's coming from a plain string.
+We have introduced a new `Source API` to Boa. The new API represents JavaScript stored from a path or `None` if it's
+coming from a plain string.
 
-This change improves the display of `boa_tester` to show the path of the tests being run. It also enables hyperlinks to directly jump to the tested file from the VS terminal.
-This will further help with error displays and debugging in the future.
+This change improves the display of `boa_tester` to show the path of the tests being run. It also enables hyperlinks to
+directly jump to the tested file from the VS terminal. This will further help with error displays and debugging in the
+future.
 
 ```rust
 use boa_engine::{Context, Source};
@@ -227,16 +230,11 @@ See Boa's [examples](https://github.com/boa-dev/boa/tree/main/boa_examples/src/b
 
 #### Hooks and Job Queues
 
-In this release we have added `HostHooks` and `JobQueue` traits to `Context`. This will allow hosts to implement custom event loops and other host specific functionality.
-This makes Boa more configurable for users and any future runtimes which need to add a more complex event loop, such as Tokio or Mio.
+In this release we have added `HostHooks` and `JobQueue` traits to `Context`. This will allow hosts to implement custom
+event loops and other host specific functionality. This makes Boa more configurable for users and any future runtimes
+which need to add a more complex event loop, such as Tokio or Mio.
 
 As a result of this change, Boa's CLI will run all jobs until the queue is empty, even if a Job returns an `Err`.`
-
-TO-DO:
-
-- new closure APIs
-- host hooks & job queue APIs
-- async functions
 
 [js_promise]: https://docs.rs/boa_engine/0.17.0/boa_engine/object/builtins/struct.JsPromise.html
 [js_regexp]: https://docs.rs/boa_engine/0.17.0/boa_engine/object/builtins/struct.JsRegExp.html
@@ -289,8 +287,6 @@ collector could collect at unexpected moments, extend the lifetime of unreachabl
 [ws]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/WeakSet
 [wm]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/WeakMap
 [moz]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/WeakRef#avoid_where_possible
-
-TO-DO: List all newly implemented builtins.
 
 ### Fuzzing
 
@@ -366,8 +362,18 @@ let msg = js_string!(&greeting, &NAME, utf16!("Nice to meet you!"));
 assert_eq!(&msg, utf16!("Hello, human! Nice to meet you!"));
 ```
 
-TO-DO:
+## Conclusions
 
-- Lazy errors
-- AST documentation
-- new GC
+If you reached so far, you probably understand how big this release was, and you can find even more changes in the
+[full changelog][changelog]. Boa is now becoming a real option for many projects, which shows with the amount of
+financial support we have received these last months. Nevertheless, going forward, we need your help to get to a 1.0
+version. Wheter you are good with Rust, JavaScript, documentation or development, we have multiple
+[good first issues][first_issues], and places where we [need help][help_wanted], both in Boa's
+[main repository][boa_engine] and [others][boa_org] around it.
+
+Once again, we have to thank to [all the contributors][contributors] of this release!!
+
+[help_wanted]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22help+wanted%22
+[boa_engine]: https://github.com/boa-dev/boa
+[boa_org]: https://github.com/boa-dev
+[contributors]: https://github.com/boa-dev/boa/graphs/contributors?from=2022-10-24&to=2023-07-05&type=c
