--- a/posts/2023-07-05-boa-release-17.md
+++ b/posts/2023-07-05-boa-release-17.md
@@ -367,7 +367,7 @@ assert_eq!(&msg, utf16!("Hello, human! Nice to meet you!"));
 If you reached so far, you probably understand how big this release was, and you can find even more changes in the
 [full changelog][changelog]. Boa is now becoming a real option for many projects, which shows with the amount of
 financial support we have received these last months. Nevertheless, going forward, we need your help to get to a 1.0
-version. Wheter you are good with Rust, JavaScript, documentation or development, we have multiple
+version. Whether you are good with Rust, JavaScript, documentation or development, we have multiple
 [good first issues][first_issues], and places where we [need help][help_wanted], both in Boa's
 [main repository][boa_engine] and [others][boa_org] around it.
 
