--- a/posts/2023-07-05-boa-release-17.md
+++ b/posts/2023-07-05-boa-release-17.md
@@ -371,7 +371,7 @@ version. Whether you are good with Rust, JavaScript, documentation or developmen
 [good first issues][first_issues], and places where we [need help][help_wanted], both in Boa's
 [main repository][boa_engine] and [others][boa_org] around it.
 
-Once again, we have to thank to [all the contributors][contributors] of this release!!
+Once again, big thanks to [all the contributors][contributors] of this release!!
 
 [help_wanted]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22help+wanted%22
 [boa_engine]: https://github.com/boa-dev/boa
