--- a/posts/2023-07-08-boa-release-17.md
+++ b/posts/2023-07-08-boa-release-17.md
@@ -77,7 +77,7 @@ assert_eq!(promise.state().unwrap(), PromiseState::Fulfilled(JsValue::undefined(
 For a more extensive, descriptive example that uses a real directory, you can check out [**boa_examples**][mod_example].
 
 [modules]: https://tc39.es/ecma262/#sec-modules
-[mod_loader]: https://boajs.dev/boa/doc/boa_engine/module/trait.ModuleLoader.html
+[mod_loader]: https://docs.rs/boa_engine/0.17.0/boa_engine/module/trait.ModuleLoader.html
 [mod_example]: https://github.com/boa-dev/boa/blob/main/boa_examples/src/bin/modules.rs
 
 ### Spec Version Conformance
