--- a/posts/2023-07-08-boa-release-17.md
+++ b/posts/2023-07-08-boa-release-17.md
@@ -78,7 +78,7 @@ For a more extensive, descriptive example that uses a real directory, you can ch
 
 [modules]: https://tc39.es/ecma262/#sec-modules
 [mod_loader]: https://docs.rs/boa_engine/0.17.0/boa_engine/module/trait.ModuleLoader.html
-[mod_example]: https://github.com/boa-dev/boa/blob/main/boa_examples/src/bin/modules.rs
+[mod_example]: https://github.com/boa-dev/boa/blob/v0.17/boa_examples/src/bin/modules.rs
 
 ### Spec Version Conformance
 
