--- a/posts/2023-07-08-boa-release-17.md
+++ b/posts/2023-07-08-boa-release-17.md
@@ -85,7 +85,7 @@ For a more extensive, descriptive example that uses a real directory, you can ch
 Something we get asked a lot is _"Do you support ES5 or ES6"_? or _"How far away are you from supporting ESX"_?
 We're pleased to say we've updated our conformance board to show you how we're doing across ES versions.
 
-Just navigate to our [Test262 Dashboard](https://boajs.dev/boa/test262/), select "Test Results" on our main branch, and
+Just navigate to our [Test262 Dashboard][conformance], select "Test Results" on our main branch, and
 then you can use the dropdown underneath to see how we're doing on each version. ES5 and ES6 are very close, you can see
 we're only a few tests away from them being fully implemented.
 
