--- a/posts/2023-07-08-boa-release-17.md
+++ b/posts/2023-07-08-boa-release-17.md
@@ -128,7 +128,7 @@ Note: When creating objects with the same property keys, it's best to create the
 the objects share the same shape.
 
 For a more in depth explanation of how shared shapes work in boa see `shapes.md`
-[here](https://github.com/boa-dev/boa/blob/main/docs/shapes.md).
+[here](https://github.com/boa-dev/boa/blob/v0.17/docs/shapes.md).
 
 ### Debug object
 
