--- a/posts/2023-07-08-boa-release-17.md
+++ b/posts/2023-07-08-boa-release-17.md
@@ -141,7 +141,7 @@ handle compiler optimizations, set runtime limits and inspect object shapes.
 
 You can find all the documentation [here][debug_object].
 
-[debug_object]: https://github.com/boa-dev/boa/blob/main/docs/boa_object.md
+[debug_object]: https://github.com/boa-dev/boa/blob/v0.17/docs/boa_object.md
 
 ### New APIs
 
