--- a/posts/2023-07-08-boa-release-17.md
+++ b/posts/2023-07-08-boa-release-17.md
@@ -226,7 +226,7 @@ fn main() {
     ...
 ```
 
-See Boa's [examples](https://github.com/boa-dev/boa/tree/main/boa_examples/src/bin) for more examples on how its used.
+See Boa's [examples](https://github.com/boa-dev/boa/tree/v0.17/boa_examples/src/bin) for more examples on how its used.
 
 #### Hooks and Job Queues
 
