--- a/posts/2023-07-08-boa-release-17.md
+++ b/posts/2023-07-08-boa-release-17.md
@@ -18,11 +18,10 @@ able to use.
 
 You can check the full list of changes [here][changelog], and the full information on conformance [here][conformance].
 
-Moreover, this big release was partly possible thanks to a grant by [Lit Protocol](https://litprotocol.com/). Lit is
-distributed key management for encryption, signing, and compute. Thanks to this grant, we were able to remunerate 2 team
-members for their 20h/week work each during three and a half months. If you wish to sponsor Boa, you can do so by
-donating to out [open collective][collective]. You can also check [easy][easy_issues] or
-[good first issues][first_issues].
+Moreover, this big release was partly possible thanks to a grant by [Lit Protocol](https://litprotocol.com/). Thanks to
+this grant, we were able to remunerate 2 team members for their 20h/week work each during three and a half months. If
+you wish to sponsor Boa, you can do so by donating to our [open collective][collective]. You can also check
+[easy][easy_issues] or [good first issues][first_issues].
 
 Furthermore, we now have a new domain for Boa, [boajs.dev][boajs].
 
