Finish up initial conformance page features & fix blog mdx error

--- a/blog/2021-01-14-boa-release-11/index.mdx
+++ b/blog/2021-01-14-boa-release-11/index.mdx
@@ -33,67 +33,67 @@ Previously many tests failed to run as the test-runner was still being worked on
 
 For live tracking of conformance tests you can check [here](https://boa-dev.github.io/boa/test262/). Below is a snapshot of the previous version and today.
 
-<div class="row" style={{ display: "flex", justifyContent: "space-around" }}>
-  <section class="col-md-4" id="version-latest">
-    <div class="card">
-      <div class="card-body" style={{ padding: "10px" }}>
+<div className="row" style={{ display: "flex", justifyContent: "space-around" }}>
+  <section className="col-md-4" id="version-latest">
+    <div className="card">
+      <div className="card-body" style={{ padding: "10px" }}>
         <h3>v0.10:</h3>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">
-            Total tests: <span class="total-tests">38,706</span>
+        <ul className="list-group list-group-flush">
+          <li className="list-group-item">
+            Total tests: <span className="total-tests">38,706</span>
           </li>
-          <li class="list-group-item">
-            Passed tests: <span class="passed-tests">6,960</span>
+          <li className="list-group-item">
+            Passed tests: <span className="passed-tests">6,960</span>
           </li>
-          <li class="list-group-item">
-            Ignored tests: <span class="ignored-tests">5,748</span>
+          <li className="list-group-item">
+            Ignored tests: <span className="ignored-tests">5,748</span>
           </li>
-          <li class="list-group-item">
-            Failed tests: <span class="failed-tests">25,998</span>
+          <li className="list-group-item">
+            Failed tests: <span className="failed-tests">25,998</span>
           </li>
-          <li class="list-group-item">
+          <li className="list-group-item">
             Conformance: <b>17.98%</b>
           </li>
         </ul>
-        <div class="info-link">
-          <a class="card-link" href="#">
-            <span class="info-link"></span>
+        <div className="info-link">
+          <a className="card-link" href="#">
+            <span className="info-link"></span>
           </a>
         </div>
       </div>
     </div>
   </section>
-  <section class="col-md-4" id="master-latest">
-    <div class="card">
-      <div class="card-body" style={{ padding: "10px" }}>
+  <section className="col-md-4" id="master-latest">
+    <div className="card">
+      <div className="card-body" style={{ padding: "10px" }}>
         <h3>v0.11:</h3>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">
-            Total tests: <span class="total-tests">78,497</span>
+        <ul className="list-group list-group-flush">
+          <li className="list-group-item">
+            Total tests: <span className="total-tests">78,497</span>
           </li>
-          <li class="list-group-item">
-            Passed tests: <span class="passed-tests">24,550</span>
+          <li className="list-group-item">
+            Passed tests: <span className="passed-tests">24,550</span>
           </li>
-          <li class="list-group-item">
-            Ignored tests: <span class="ignored-tests">15,585</span>
+          <li className="list-group-item">
+            Ignored tests: <span className="ignored-tests">15,585</span>
           </li>
-          <li class="list-group-item">
-            Failed tests: <span class="failed-tests">38,362 (24 ⚠)</span>
+          <li className="list-group-item">
+            Failed tests: <span className="failed-tests">38,362 (24 ⚠)</span>
           </li>
-          <li class="list-group-item">
+          <li className="list-group-item">
             Conformance: <b>31.28%</b>
           </li>
         </ul>
-        <div class="info-link">
-          <a class="card-link" href="#">
-            <span class="info-link"></span>
+        <div className="info-link">
+          <a className="card-link" href="#">
+            <span className="info-link"></span>
           </a>
         </div>
       </div>
     </div>
   </section>
   <section
-    class="col-md-4"
+    className="col-md-4"
     style={{ display: "none" }}
     id="old-versions"
   ></section>
