Upgrade to Docusaurus 3

--- a/blog/2022-10-24-boa-usage.md
+++ b/blog/2022-10-24-boa-usage.md
@@ -381,7 +381,7 @@ with some great enhancements. For example, [@jedel1043][jedel1043] has created n
 ["lazy" errors][lazy-errors], that are much easier to create and throw, since they don't need a
 `Context`, and also enhance the performance. [@nekevss][nekevss] has implemented a
 [new wrapper][jsregexp] for `RegExp`, and [@anuvratsingh][anuvratsingh] is working on a `Date`
-[wrapper][jsdate]. [@razican][razican] is working on a JavaScript <-> Rust
+[wrapper][jsdate]. [@razican][razican] is working on a JavaScript to Rust
 [conversion trait][jsrust] and derive, that will allow you to convert a `JsValue` to a Rust
 structure and back really easily:
 
