Updated dependencies, added ESLint & Prettier

--- a/blog/2021-01-14-boa-release-11/index.mdx
+++ b/blog/2021-01-14-boa-release-11/index.mdx
@@ -33,7 +33,10 @@ Previously many tests failed to run as the test-runner was still being worked on
 
 For live tracking of conformance tests you can check [here](https://boa-dev.github.io/boa/test262/). Below is a snapshot of the previous version and today.
 
-<div className="row" style={{ display: "flex", justifyContent: "space-around" }}>
+<div
+  className="row"
+  style={{ display: "flex", justifyContent: "space-around" }}
+>
   <section className="col-md-4" id="version-latest">
     <div className="card">
       <div className="card-body" style={{ padding: "10px" }}>
