--- a/blog/2021-09-30-boa-release-13.md
+++ b/blog/2021-09-30-boa-release-13.md
@@ -31,7 +31,7 @@ This release brings support for the relative indexing method [String.prototype.a
 const sentence = "The quick brown fox jumps over the lazy dog.";
 let index = 5;
 console.log(
-  `Using an index of ${index} the character returned is ${sentence.at(index)}`
+  `Using an index of ${index} the character returned is ${sentence.at(index)}`,
 );
 // expected output: "Using an index of 5 the character returned is u"
 ```
