add workflows back in

--- a/blog/2024-03-07-boa-release-18.md
+++ b/blog/2024-03-07-boa-release-18.md
@@ -251,7 +251,7 @@ ECMAScript 262 specification is constantly evolving, which is why there are also
 changes and additions to existing builtins that keep Boa updated to the latest revisions of the
 specification.
 
-All examples were taken from the [Mozilla Web Docs](developer.mozilla.org).
+All examples were taken from the [Mozilla Web Docs](https://developer.mozilla.org/en-US).
 
 ### [findLast and findLastIndex on TypedArray](https://github.com/boa-dev/boa/pull/3135)
 
