Remove /boa from link

--- a/blog/2024-03-07-boa-release-18.md
+++ b/blog/2024-03-07-boa-release-18.md
@@ -38,7 +38,7 @@ some code instead.
 
 [changelog]: https://github.com/boa-dev/boa/blob/v0.18/CHANGELOG.md
 [conformance]: https://boajs.dev/boa/test262/
-[feed]: https://boajs.dev/boa/blog/rss.xml
+[feed]: https://boajs.dev/blog/rss.xml
 [collective]: https://opencollective.com/boa
 [easy_issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3AE-Easy
 [first_issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22
