Fix link to user and fix small redaction error

--- a/blog/2024-03-07-boa-release-18.md
+++ b/blog/2024-03-07-boa-release-18.md
@@ -125,7 +125,7 @@ Temporal, feel free to check out `temporal_rs`'s [issues](https://github.com/boa
 Over the past 7 months there has been some effort poured into an improved implementation of RegExp.
 This includes:
 
-- Support for [`RegExp.prototype.hasIndices`] (Thanks to @dirkdev98!).
+- Support for [`RegExp.prototype.hasIndices`] (Thanks to [@dirkdev98](https://github.com/dirkdev98)!).
 - Support for Unicode sets, aka the `v` flag.
 - Support for UTF-16 text searches.
 - General fixes around `RegExp()`, `RegExp.toString()` and `RegExp.match()`.
@@ -617,9 +617,9 @@ fn main() -> eyre::Result<()> {
 
 Why not call it `JsSendError` instead of `JsErasedError`? Well, it is generally not possible to
 convert a `JsError` into a `JsErasedError` without losing some information in the conversion. However,
-`JsSendError` gave the appearance of being `JsError` but `Send`, which is really not true. Hence,
-we decided to call it `JsErasedError` to emphasize that the conversion is not lossless. Though, feel
-free to ping us if you have a better name for it!
+`JsSendError` gave the appearance of being `JsError` but `Send`, which is really not true. `JsErasedError`,
+on the other hand, makes it clear the conversion is not lossless. Feel free to ping us if you have a
+better name for it though!
 
 ## Optimizations
 
