Remove all references to the development docs

--- a/blog/2023-07-08-boa-release-17.md
+++ b/blog/2023-07-08-boa-release-17.md
@@ -257,7 +257,7 @@ Boa now has internationalization support! Although we are still working on full 
 - [`Intl.Segmenter`][segmenter]
 
 Internationalization data can be pretty expensive at times: the default data included by Boa is 10.6 MB, which is why
-we allow customizing the data provider used by the engine with the [`ContextBuilder::icu_provider`][ctx_provider] hook.
+we allow customizing the data provider used by the engine with the `ContextBuilder::icu_provider` hook.
 For more information on how to generate custom internationalization data, you can check out the
 [**data management tutorial**][data] from [`icu4x`], the internationalization library used in Boa. Shoutout to the
 `icu4x` team, who are the ones that made all of this possible!
@@ -270,8 +270,6 @@ size.
 [list]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/ListFormat
 [locale]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/Collator
 [segmenter]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/Segmenter
-[provider]: https://boajs.dev/boa/doc/boa_engine/context/enum.BoaProvider.html
-[ctx_provider]: https://boajs.dev/boa/doc/boa_engine/context/struct.ContextBuilder.html#method.icu_provider
 [data]: https://github.com/unicode-org/icu4x/blob/main/docs/tutorials/data_management.md#data-management-in-icu4x
 [`icu4x`]: https://github.com/unicode-org/icu4x
 
