migration to Matrix

--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -51,6 +51,12 @@ Over time we will eventually need to work with other engines to have a more adva
 
 This change also offered a nice side effect of not having benchmark or test262 data in the main repository anymore. Last time we released we had [reports](https://www.reddit.com/r/rust/comments/1b91ora/comment/ktue8rf/) of the repository being too large, so we've taken steps to reduce the size of the repository by moving this data to a separate repository and building a nightly version for reporting. Not only this makes it easier for anyone cloning Boa today but pushes to `main` are now much faster due to us not having to run test262 or Benchmarks each time.
 
+## Migration to Matrix
+
+The Boa team will be migrating to Matrix from our Discord servers over the course of this year. This means we will hang out in the `#boa:matrix.org` room and will be available for questions and discussions there. We will also be using Matrix for other break-out rooms such as [Performance](https://matrix.to/#/!odQJQiuPFJtUBzgoXY:matrix.org?via=matrix.org&via=mozilla.org), [Intl](https://matrix.to/#/!rsWLMsIzfquQAbDoak:matrix.org?via=matrix.org) and [Temporal](https://matrix.to/#/!DeQjFAUjAPAffIsCgq:matrix.org?via=matrix.org&via=mozilla.org&via=igalia.com) We will be keeping the Discord server open for a while to allow people to migrate over, but we will eventually close it down sometime in 2025.
+
+Boa has long been a user of Discord, pretty much since the beginning of the project, but as it has grown we have chosen to move closer to other communities using Matrix such as TC39 who work on JavaScript standard, our closer ties with them (when implementing Temporal plus other specs) mean working on the same platform makes sense.
+
 ## Optimizations
 
 ### Release binary stripping
@@ -115,7 +121,7 @@ web development, we also welcome help to improve our web presence, either in [ou
 comparison GitHub [action].
 
 We are also looking to improve the documentation of the engine, both for developers of the engine
-itself and for users of the engine. Feel free to contact us in [Discord].
+itself and for users of the engine. Feel free to contact us in [Matrix].
 
 [open collective]: https://opencollective.com/boa
 [open issues]: https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+no%3Aassignee
@@ -123,7 +129,7 @@ itself and for users of the engine. Feel free to contact us in [Discord].
 [our website]: https://github.com/boa-dev/boa-dev.github.io
 [testing representation]: https://github.com/boa-dev/boa/issues/820
 [action]: https://github.com/boa-dev/criterion-compare-action
-[Discord]: https://discord.gg/tUFFk9Y
+[Matrix]: https://matrix.to/#/#boa:matrix.org
 
 ### Thank You
 
