add link to #boa:matrix.org

--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -53,7 +53,7 @@ This change also offered a nice side effect of not having benchmark or test262 d
 
 ## Migration to Matrix
 
-The Boa team will be migrating to Matrix from our Discord servers over the course of this year. This means we will hang out in the `#boa:matrix.org` room and will be available for questions and discussions there. We will also be using Matrix for other break-out rooms such as [Performance](https://matrix.to/#/!odQJQiuPFJtUBzgoXY:matrix.org?via=matrix.org&via=mozilla.org), [Intl](https://matrix.to/#/!rsWLMsIzfquQAbDoak:matrix.org?via=matrix.org) and [Temporal](https://matrix.to/#/!DeQjFAUjAPAffIsCgq:matrix.org?via=matrix.org&via=mozilla.org&via=igalia.com) We will be keeping the Discord server open for a while to allow people to migrate over, but we will eventually close it down sometime in 2025.
+The Boa team will be migrating to Matrix from our Discord servers over the course of this year. This means we will hang out in the [`#boa:matrix.org`](https://matrix.to/#/#boa:matrix.org) room and will be available for questions and discussions there. We will also be using Matrix for other break-out rooms such as [Performance](https://matrix.to/#/!odQJQiuPFJtUBzgoXY:matrix.org?via=matrix.org&via=mozilla.org), [Intl](https://matrix.to/#/!rsWLMsIzfquQAbDoak:matrix.org?via=matrix.org) and [Temporal](https://matrix.to/#/!DeQjFAUjAPAffIsCgq:matrix.org?via=matrix.org&via=mozilla.org&via=igalia.com) We will be keeping the Discord server open for a while to allow people to migrate over, but we will eventually close it down sometime in 2025.
 
 Boa has long been a user of Discord, pretty much since the beginning of the project, but as it has grown we have chosen to move closer to other communities using Matrix such as TC39 who work on JavaScript standard, our closer ties with them (when implementing Temporal plus other specs) mean working on the same platform makes sense.
 
