add new contributors

--- a/blog/2024-07-09-boa-release-19.md
+++ b/blog/2024-07-09-boa-release-19.md
@@ -55,7 +55,7 @@ This change also offered a nice side effect of not having benchmark or test262 d
 
 The Boa team will be migrating to Matrix from our Discord servers over the course of this year. This means we will hang out in the [`#boa:matrix.org`](https://matrix.to/#/#boa:matrix.org) room and will be available for questions and discussions there. We will also be using Matrix for other break-out rooms on future development in areas such as [Performance](https://matrix.to/#/!odQJQiuPFJtUBzgoXY:matrix.org?via=matrix.org&via=mozilla.org), [Intl](https://matrix.to/#/!rsWLMsIzfquQAbDoak:matrix.org?via=matrix.org) and [Temporal](https://matrix.to/#/!DeQjFAUjAPAffIsCgq:matrix.org?via=matrix.org&via=mozilla.org&via=igalia.com). We will be keeping the Discord server open for a while to allow people to migrate over, but we will eventually close it down sometime in 2025.
 
-Boa has long been a user of Discord, pretty much since the beginning of the project, but as the project has grown and matured, we have chosen to move more in line to other communities who use Matrix for communication, such as TC39 who work on ECMAScript standard. With Boa's increased conformance and ability to work closer with the standard committee when implementing Temporal and other new specifications meant that a migration to Matrix was the most natural choice to ease communication with the broader JavaScript implementer communities. 
+Boa has long been a user of Discord, pretty much since the beginning of the project, but as the project has grown and matured, we have chosen to move more in line to other communities who use Matrix for communication, such as TC39 who work on ECMAScript standard. With Boa's increased conformance and ability to work closer with the standard committee when implementing Temporal and other new specifications meant that a migration to Matrix was the most natural choice to ease communication with the broader JavaScript implementer communities.
 
 ## Optimizations
 
@@ -94,17 +94,17 @@ $boa.object.indexedStorageType(a); // 'SparseElement'
 
 Much of this work is possible thanks to our implementation of [Object Shapes](https://github.com/boa-dev/boa/blob/main/docs/shapes.md)
 
-###
+## New Contributors
 
-## Intl updates
+Thank you to the new contributors to Boa for this release, you can find their contributions below:
 
-## Builtins updates
-
-## APIs updates
-
-### Experimental features
-
-## Conclusion
+- @robot-head made their first contribution in https://github.com/boa-dev/boa/pull/3730
+- @hansl made their first contribution in https://github.com/boa-dev/boa/pull/3755
+- @NickTomlin made their first contribution in https://github.com/boa-dev/boa/pull/3793
+- @linusg made their first contribution in https://github.com/boa-dev/boa/pull/3800
+- @getong made their first contribution in https://github.com/boa-dev/boa/pull/3836
+- @leoflalv made their first contribution in https://github.com/boa-dev/boa/pull/3867
+- @CrazyboyQCD made their first contribution in https://github.com/boa-dev/boa/pull/3898
 
 ### How can you support Boa?
 
@@ -135,8 +135,8 @@ itself and for users of the engine. Feel free to contact us in [Matrix].
 
 Once again, big thanks to [all the contributors][contributors] of this release!!
 
-[contributors]: https://github.com/boa-dev/boa/graphs/contributors?from=2023-07-08&to=2024-03-05&type=c
-[changelog]: https://github.com/boa-dev/boa/blob/v0.18/CHANGELOG.md
+[contributors]: https://github.com/boa-dev/boa/graphs/contributors?from=2024-03-05&to=2024-07-11&type=c
+[changelog]: https://github.com/boa-dev/boa/blob/v0.19/CHANGELOG.md
 [conformance]: https://boajs.dev/boa/test262/
 [feed]: https://boajs.dev/blog/rss.xml
 [collective]: https://opencollective.com/boa
